[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secrets-env"
version = "0.1.0"
description = "Universal wrapper around Infisical's Python SDK for secret management with caching and logging"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "infisicalsdk>=1.0.12",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "cachetools>=5.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.hatchling.build]
packages = ["secrets_env"]
